--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ mediapipe==0.8.7.3
 numpy==1.19.5
 opencv_python==4.5.2.52
 pynput==1.7.5
+pillow==1.2.2
+playsound
+wikipedia
+webdriver_manager
+gtts
